--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -83,29 +83,7 @@
 \renewcommand\cite[1]{\autocite{#1}}
 \pagestyle{fancy}
 
-\newcommand{\smonkey}[0]{\textit{A. fusciceps}\xspace}
-\newcommand{\cow}[0]{\textit{B. taurus}\xspace}
-\newcommand{\dog}[0]{\textit{C. familiaris}\xspace}
-\newcommand{\armadillo}[0]{\textit{D. novemcinctus}\xspace}
-\newcommand{\horse}[0]{\textit{E. caballus}\xspace}
-\newcommand{\elephant}[0]{\textit{L. africana}\xspace}
-\newcommand{\human}[0]{\textit{H. sapiens}\xspace}
-\newcommand{\opossum}[0]{\textit{M. domestica}\xspace}
-\newcommand{\mouse}[0]{\textit{M. musculus}\xspace}
-\newcommand{\galili}[0]{\textit{S. galili}\xspace}
-\newcommand{\sheep}[0]{\textit{O. aries}\xspace}
-\newcommand{\bonobo}[0]{\textit{P. paniscus}\xspace}
-\newcommand{\carmeli}[0]{\textit{S. carmeli}\xspace}
-\newcommand{\pig}[0]{\textit{S. scrofa}\xspace}
-
-\newcommand{\genetreeexplanation}[1]{Gene tree and heatmap of
-  expression of genes related to #1. The gene tree was obtained from
-  Ensembl~\cite{Cunningham.ea2015:Ensembl2015} and genes from species
-  not included in this study or having expression by FPKM less
-  than 1 were excluded from the plotted tree. Heatmap cells in grey
-  are from species where there was no expression of the relevant
-  transcript (or a species where that transcript does not apply).}
-
+\input{common_latex}
 
 \begin{document}
 
