--- a/presentation/placenta_viviparous_presentation.Rnw
+++ b/presentation/placenta_viviparous_presentation.Rnw
@@ -303,10 +303,11 @@ print(pp %>%
       %>% phylopic("a9f4ebd5-53d7-4de9-9e66-85ff6c2d513e",color="#CCCC44",alpha=0.5,node=13,width=0.18)
       )
 @ 
-\end{figure}
+% \end{figure}
 \end{frame}
 
 \begin{frame}{Variation in Gestational Periods and Litter Size}
+\centering
 \footnotesize
 %\begin{table}
   \begin{tabular}{c c c c}
@@ -336,6 +337,7 @@ print(pp %>%
 
 \begin{frame}{Variations in Placenta Morphology}
 %\begin{table}
+\centering
 \footnotesize
 \begin{tabular}{c c c}
   \toprule
@@ -451,7 +453,7 @@ print(pp %>%
 
 \begin{frame}{Transcriptome Mapping Statistics: Reads}
 \begin{figure}
-<<transcriptome.mapping.figure,fig.width=10,fig.height=8,echo=FALSE>>=
+<<transcriptome.mapping.figure,fig.width=4,fig.height=4,echo=FALSE>>=
 print(ggplot(star.logs[grepl("input reads$",field),list(reads=as.numeric(value),species=capfirst(species))],
              aes(x=species,y=reads))
       + coord_flip()
@@ -461,7 +463,8 @@ print(ggplot(star.logs[grepl("input reads$",field),list(reads=as.numeric(value),
       + xlab("Species")
       + theme_bw()
       + theme(legend.position="top",
-              axis.text.x = element_text(size=10,face="italic"))
+              axis.text.x = element_text(size=10),
+              axis.text.y = element_text(size=10,face="italic"))
       )
 @ 
 \end{figure}
@@ -469,7 +472,7 @@ print(ggplot(star.logs[grepl("input reads$",field),list(reads=as.numeric(value),
 
 \begin{frame}{Transcriptome Mapping Statistics: Unmapped}
 \begin{figure}
-<<transcriptome.mapping.figure.unmapped,fig.width=8,fig.height=8,echo=FALSE>>=
+<<transcriptome.mapping.figure.unmapped,fig.width=4,fig.height=4,echo=FALSE>>=
 star.logs.unmapped <- 
     star.logs[grepl("%",field) & 
                   grepl("unmapped",field) & 
@@ -485,7 +488,8 @@ print(ggplot(star.logs.unmapped,
       + theme_bw()
       + coord_flip()
       + theme(legend.position="top",
-              axis.text.x = element_text(face="italic"))
+              axis.text.x = element_text(size=10),
+              axis.text.y = element_text(face="italic",size=10))
       )
 @ 
 \end{figure}
@@ -566,9 +570,9 @@ placenta.lineage.specific.table <- function(analysis,output=TRUE) {
 
 \begin{frame}{Core Placenta Transcriptome}
 \begin{figure}
-<<core.placenta.transcriptome,fig.width=8,fig.height=12,out.height="0.8\\textheight",echo=FALSE>>=
+<<core.placenta.transcriptome,fig.width=10,fig.height=6,out.height="0.8\\textheight",echo=FALSE>>=
 print(ggplot(core.placenta.transcriptome.long[!grepl("(min|median|max)_expression",Species),],
-             aes(y=human_name,x=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(Species))))
+             aes(x=human_name,y=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(Species))))
       + geom_raster(aes(fill=log10(FPKM)))
       + scale_x_discrete(expand=c(0,0))
       + scale_y_discrete(expand=c(0,0))
@@ -579,13 +583,13 @@ print(ggplot(core.placenta.transcriptome.long[!grepl("(min|median|max)_expressio
                             limits=c(0,4),
                             guide=guide_colorbar(title=expression(log[10](FPKM)))
                             )
-      + ylab("Human Ortholog Name")
-      + xlab("Species")
+      + xlab("Human Ortholog Name")
+      + ylab("Species")
       + theme_grey()
       + theme(legend.position="top",
               axis.ticks = element_blank(),
               axis.text.y = element_text(face="italic"),
-              axis.text.x = element_text(angle = 340, hjust = 0.1, vjust=1,face="italic"))
+              axis.text.x = element_text(angle=90,hjust=1,face="italic"))
       )
 @ 
 \end{figure}
@@ -645,7 +649,7 @@ hormones in multiple mammalian species (\cref{fig:hormone_genes}).
 \end{itemize}
 \column{0.6\textwidth}
 \begin{figure}
-<<hormone.genes.plot,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
+<<hormone.genes.plot,echo=FALSE,warning=FALSE,message=FALSE>>=
 
 gene.expression.nozero <- function(genes) {
     temp <-
