--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -513,6 +513,8 @@ genes.expression.table <- function(species.name,min.fpkm=50) {
 
 \subsection{Gene Evolution Trees}
 
+\subsubsection{Pre-eclampsia genes}
+
 \begin{figure}[hb]
 <<adam12.evolution.tree,echo=FALSE,out.height="0.6\\textheight",fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
 
@@ -549,6 +551,45 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \caption{\genetreeexplanation{\textit{KISS1}}}
 \label{fig:kiss1_evolution_tree}
 \end{figure}
+
+\begin{figure}
+<<pappa.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="PAPPA" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 gene.tree.table,gene.tree.expression,min.fpkm=5,
+                 axis.text.size=5,
+                 axis.text.angle=0,
+                 fontsize=5
+                 )
+@ 
+\caption{\genetreeexplanation{\textit{PAPPA}}}
+\label{fig:pappa_evolution_tree}
+\end{figure}
+
+\begin{figure}
+<<tgfb1.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="TGFB1" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
+                 subtree=c("ENSMODG00000008630","ENSSSCG00000026296"),
+                 gene.tree.table,gene.tree.expression,min.fpkm=5,
+                 axis.text.size=5,
+                 fontsize=5
+                 )
+@ 
+\caption{\genetreeexplanation{\textit{TGFB1}}}
+\label{fig:tgfb1_evolution_tree}
+\end{figure}
+
 
 \begin{figure}
 <<gpc3.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
