--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -25,10 +25,10 @@
   name corresponding to the human symbol. A complete list of all genes
   is in \cref{#2}.}
 
-\newcommand{\genetreeexplanation}[1]{Gene tree and heatmap of
-  expression of genes related to #1. The gene tree was obtained from
+\newcommand{\genetreeexplanation}[2][1]{Gene tree and heatmap of
+  expression of genes related to #2. The gene tree was obtained from
   Ensembl~\cite{Cunningham.ea2015:Ensembl2015} and genes from species
-  not included in this study or having expression by FPKM less than 1
+  not included in this study or having expression by FPKM less than #1
   were excluded from the plotted tree. Heatmap cells in white are from
   species where there was no expression of the relevant transcript (or
   a species where that transcript does not apply). The species names
